# ProgLab2

./: CMakeLists.txt  main.cpp  tests.cpp  utils.cpp  utils.h
.github/workflows/: cmake-multi-platform.yml
